syntax = "proto3";

package wpi.proto;

import "geometry2d.proto";

option java_package = "edu.wpi.first.math.proto";

message ProtobufTrajectory {
  message State {
    double time_seconds = 1;
    double velocity_mps = 2;
    double acceleration_mps_sq = 3;
    ProtobufPose2d pose = 4;
    double curvature_rad_per_meter = 5;
  }

  double total_time = 1;
  repeated State states = 2;
}
